Simple position fix, the image was covering all the texts

--- a/cat-website/style.css
+++ b/cat-website/style.css
@@ -48,7 +48,7 @@ header nav {
     width: 100%;
     height: auto;
 }
-#presentation .titles, #presentation img{
+#presentation .titles{
     position: absolute;
 }
 #presentation .titles{
